--- a/app/assets/stylesheets/front/_root.scss
+++ b/app/assets/stylesheets/front/_root.scss
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
 .container {
   padding: 1rem 0 0 1rem;
   display: flex;
